force-app/main/default/objects/VIAffaire__c/VIAffaire__c.object-meta.xml
<CustomObject>
    <label>Affaire</label>
    <nameField>
        <label>Code Affaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affaires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>