force-app/main/default/objects/VIAffaire__c/fields/Affaire_reouverte__c.field-meta.xml
<CustomField>
    <fullName>Affaire_reouverte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affaire ré-ouverte pour la dépense ?</label>
    <type>Checkbox</type>
</CustomField>