force-app/main/default/objects/VIAffaire__c/fields/Affaire_reouverte_pour_le_pointage__c.field-meta.xml
<CustomField>
    <fullName>Affaire_reouverte_pour_le_pointage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affaire ré-ouverte pour le pointage ?</label>
    <type>Checkbox</type>
</CustomField>