force-app/main/default/objects/VIAffaire__c/fields/Agence_Regionale_BW__c.field-meta.xml
<CustomField>
    <fullName>Agence_Regionale_BW__c</fullName>
    <label>Agence Régionale BW</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Entite_BW__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>AgenceRegionaleBW</valueSetName>
    </valueSet>
</CustomField>