force-app/main/default/objects/VIAffaire__c/fields/Agence_Regionale_BW_commande__c.field-meta.xml
<CustomField>
    <fullName>Agence_Regionale_BW_commande__c</fullName>
    <label>Agence Régionale BW (commande)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>