force-app/main/default/objects/VIAffaire__c/fields/Budget_Debours__c.field-meta.xml
<CustomField>
    <fullName>Budget_Debours__c</fullName>
    <label>Budget Debours</label>
    <summarizedField>VIAvenant__c.Debours__c</summarizedField>
    <summaryForeignKey>VIAvenant__c.Affaire__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>