force-app/main/default/objects/VIAffaire__c/fields/Budget_PRI_E__c.field-meta.xml
<CustomField>
    <fullName>Budget_PRI_E__c</fullName>
    <label>Budget PRI €</label>
    <summarizedField>VIAvenant__c.PRI_E__c</summarizedField>
    <summaryForeignKey>VIAvenant__c.Affaire__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>