force-app/main/default/objects/VIAffaire__c/fields/Budget_PV__c.field-meta.xml
<CustomField>
    <fullName>Budget_PV__c</fullName>
    <label>Budget PV</label>
    <summarizedField>VIAvenant__c.PV__c</summarizedField>
    <summaryForeignKey>VIAvenant__c.Affaire__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>