force-app/main/default/objects/VIAffaire__c/fields/Business_Unit_Libelle__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Libelle__c</fullName>
    <formula>case(Produit_SousDomaine__r.libelle_BU__c, 

  &apos;C&apos;,&apos;CHAUDIERES&apos;, 
  &apos;L&apos;,&apos;LOCATION / OCCASION&apos;, 
  &apos;S&apos;,&apos;SERVICE&apos;, 
  &apos;A&apos;,&apos;TRAITEMENT AIR&apos;, 
  &apos;E&apos;,&apos;TRAITEMENT EAU&apos;, 
  &apos;F&apos;,&apos;DIVISION FONCTIONNELLE&apos;, 
  &apos;inconnu&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit - Libellé</label>
    <type>Text</type>
</CustomField>