force-app/main/default/objects/VIAffaire__c/fields/CAF_du_devis__c.field-meta.xml
<CustomField>
    <fullName>CAF_du_devis__c</fullName>
    <formula>Order__r.Quote.DEV_Charg_daffaire__r.FirstName +&apos; &apos; + Order__r.Quote.DEV_Charg_daffaire__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAF du devis</label>
    <type>Text</type>
</CustomField>