force-app/main/default/objects/VIAffaire__c/fields/Chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_projet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chef de projet</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Affaire</relationshipName>
    <type>Lookup</type>
</CustomField>