force-app/main/default/objects/VIAffaire__c/fields/Chef_de_projet_actif__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_projet_actif__c</fullName>
    <formula>Chef_de_projet__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chef de projet actif</label>
    <type>Checkbox</type>
</CustomField>