force-app/main/default/objects/VIAffaire__c/fields/Client_code_commande__c.field-meta.xml
<CustomField>
    <fullName>Client_code_commande__c</fullName>
    <formula>Name + &apos; &apos; + Code_Commande__c + &apos; &apos; +Nom_affaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client + code commande</label>
    <type>Text</type>
</CustomField>