force-app/main/default/objects/VIAffaire__c/fields/Code_client__c.field-meta.xml
<CustomField>
    <fullName>Code_client__c</fullName>
    <formula>Compte__r.ACC_ERPIdFRA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code client</label>
    <type>Text</type>
</CustomField>