force-app/main/default/objects/VIAffaire__c/fields/Code_Commande__c.field-meta.xml
<CustomField>
    <fullName>Code_Commande__c</fullName>
    <label>Code Commande</label>
    <length>255</length>
    <type>Text</type>
</CustomField>