force-app/main/default/objects/VIAffaire__c/fields/Code_commande_Nom_affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_commande_Nom_affaire__c</fullName>
    <formula>Code_Commande__c +&apos; &apos; + Nom_affaire__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code commande + Nom affaire</label>
    <type>Text</type>
</CustomField>