force-app/main/default/objects/VIAffaire__c/fields/Code_domaine__c.field-meta.xml
<CustomField>
    <fullName>Code_domaine__c</fullName>
    <formula>Produit_SousDomaine__r.Code_Domaine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code domaine</label>
    <type>Text</type>
</CustomField>