force-app/main/default/objects/VIAffaire__c/fields/Code_fiche_affaire__c.field-meta.xml
<CustomField>
    <fullName>Code_fiche_affaire__c</fullName>
    <formula>text(Produit_SousDomaine__r.Code_fiche_affaire__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code fiche affaire</label>
    <type>Text</type>
</CustomField>