force-app/main/default/objects/VIAffaire__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affaires</relationshipLabel>
    <relationshipName>Affaires</relationshipName>
    <type>Lookup</type>
</CustomField>