force-app/main/default/objects/VIAffaire__c/fields/CurrentProjectManager__c.field-meta.xml
<CustomField>
    <fullName>CurrentProjectManager__c</fullName>
    <formula>IF( Chef_de_projet__c  = $User.Id , true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentProjectManager</label>
    <type>Checkbox</type>
</CustomField>