force-app/main/default/objects/VIAffaire__c/fields/Cycle_RAD__c.field-meta.xml
<CustomField>
    <fullName>Cycle_RAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle RAD</label>
    <type>Checkbox</type>
</CustomField>