force-app/main/default/objects/VIAffaire__c/fields/Date_de_derniere_revue__c.field-meta.xml
<CustomField>
    <fullName>Date_de_derniere_revue__c</fullName>
    <label>Date de dernière revue</label>
    <type>Date</type>
</CustomField>