force-app/main/default/objects/VIAffaire__c/fields/Date_de_fin_de_garantie__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_garantie__c</fullName>
    <formula>if(!isnull(Date_de_SAV_reelle__c) , 
     ADDMONTHS( Date_de_SAV_reelle__c, Produit_SousDomaine__r.Duree_garantie__c  ),
     null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin de garantie</label>
    <type>Date</type>
</CustomField>