force-app/main/default/objects/VIAffaire__c/fields/Date_de_SAV_previsionnelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_SAV_previsionnelle__c</fullName>
    <label>Date de SAV prévisionnelle</label>
    <type>Date</type>
</CustomField>