force-app/main/default/objects/VIAffaire__c/fields/Date_de_SAV_reelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_SAV_reelle__c</fullName>
    <label>Date de SAV réelle</label>
    <type>Date</type>
</CustomField>