force-app/main/default/objects/VIAffaire__c/fields/Date_max_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Date_max_mouvement__c</fullName>
    <label>Date max mouvement</label>
    <type>Date</type>
</CustomField>