force-app/main/default/objects/VIAffaire__c/fields/Date_ouverture_affaire__c.field-meta.xml
<CustomField>
    <fullName>Date_ouverture_affaire__c</fullName>
    <label>Date d&apos;ouverture d&apos;affaire</label>
    <required>true</required>
    <type>Date</type>
</CustomField>