force-app/main/default/objects/VIAffaire__c/fields/Description_courte__c.field-meta.xml
<CustomField>
    <fullName>Description_courte__c</fullName>
    <label>Description courte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>