force-app/main/default/objects/VIAffaire__c/fields/Duree_de_garantie__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_garantie__c</fullName>
    <formula>Produit_SousDomaine__r.Duree_garantie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée de garantie</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>