force-app/main/default/objects/VIAffaire__c/fields/Entite_BW__c.field-meta.xml
<CustomField>
    <fullName>Entite_BW__c</fullName>
    <label>Entité BW</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EntiteBW</valueSetName>
    </valueSet>
</CustomField>