force-app/main/default/objects/VIAffaire__c/fields/Etat_de_l_affaire__c.field-meta.xml
<CustomField>
    <fullName>Etat_de_l_affaire__c</fullName>
    <label>Etat de l&apos;affaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Etat_de_l_affaire</valueSetName>
    </valueSet>
</CustomField>