force-app/main/default/objects/VIAffaire__c/fields/Libelle_domaine__c.field-meta.xml
<CustomField>
    <fullName>Libelle_domaine__c</fullName>
    <formula>text(Produit_SousDomaine__r.Libelle_Domaine__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libellé domaine</label>
    <type>Text</type>
</CustomField>