force-app/main/default/objects/VIAffaire__c/fields/Marge_indus_Backlog_Annee_1__c.field-meta.xml
<CustomField>
    <fullName>Marge_indus_Backlog_Annee_1__c</fullName>
    <label>Marge indus Backlog Année-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>