force-app/main/default/objects/VIAffaire__c/fields/Matricule_Chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Matricule_Chef_de_projet__c</fullName>
    <formula>Chef_de_projet__r.NMatricule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matricule Chef de projet</label>
    <type>Text</type>
</CustomField>