force-app/main/default/objects/VIAffaire__c/fields/Nom_affaire__c.field-meta.xml
<CustomField>
    <fullName>Nom_affaire__c</fullName>
    <label>Nom de l&apos;affaire</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>