force-app/main/default/objects/VIAffaire__c/fields/Objet_affaire__c.field-meta.xml
<CustomField>
    <fullName>Objet_affaire__c</fullName>
    <label>Objet de l&apos;affaire</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>