force-app/main/default/objects/VIAffaire__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Affaires</relationshipLabel>
    <relationshipName>Affaires</relationshipName>
    <type>Lookup</type>
</CustomField>