force-app/main/default/objects/VIAffaire__c/fields/Pays_de_facturation__c.field-meta.xml
<CustomField>
    <fullName>Pays_de_facturation__c</fullName>
    <formula>Compte__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pays de facturation</label>
    <type>Text</type>
</CustomField>