force-app/main/default/objects/VIAffaire__c/fields/pourcent_avancement__c.field-meta.xml
<CustomField>
    <fullName>pourcent_avancement__c</fullName>
    <label>% à l&apos;avancement</label>
    <summarizedField>VILigne_d_affaire_mensuelle__c.Dont_comptabiliseC__c</summarizedField>
    <summaryForeignKey>VILigne_d_affaire_mensuelle__c.Affaire__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>