force-app/main/default/objects/VIAffaire__c/fields/Produit_SousDomaine__c.field-meta.xml
<CustomField>
    <fullName>Produit_SousDomaine__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Produit - SousDomaine</label>
    <referenceTo>VISousDomaine__c</referenceTo>
    <relationshipLabel>Affaires</relationshipLabel>
    <relationshipName>Affaires</relationshipName>
    <type>Lookup</type>
</CustomField>