force-app/main/default/objects/VIAffaire__c/fields/Responsable_facturation_client__c.field-meta.xml
<CustomField>
    <fullName>Responsable_facturation_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable de facturation client</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Affaires</relationshipName>
    <type>Lookup</type>
</CustomField>