force-app/main/default/objects/VIAffaire__c/fields/Secteur__c.field-meta.xml
<CustomField>
    <fullName>Secteur__c</fullName>
    <label>Secteur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SecteurCommercial</valueSetName>
    </valueSet>
</CustomField>