force-app/main/default/objects/VIAffaire__c/fields/Secteur_commande__c.field-meta.xml
<CustomField>
    <fullName>Secteur_commande__c</fullName>
    <label>Secteur (commande)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>