force-app/main/default/objects/VIAffaire__c/fields/Type_d_imputation_Libelle__c.field-meta.xml
<CustomField>
    <fullName>Type_d_imputation_Libelle__c</fullName>
    <formula>Produit_SousDomaine__r.Type_d_imputation_Libelle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;imputation - Libellé</label>
    <type>Text</type>
</CustomField>