force-app/main/default/objects/VIAffaire__c/fields/Type_Imputation__c.field-meta.xml
<CustomField>
    <fullName>Type_Imputation__c</fullName>
    <formula>text(Produit_SousDomaine__r.Type_d_imputation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Imputation</label>
    <type>Text</type>
</CustomField>