force-app/main/default/objects/VIAffaire__c/validationRules/Code_Affaire_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Code_Affaire_unique</fullName>
    <active>false</active>
    <errorConditionFormula>(ISNEW() || ISCHANGED(Name)) &amp;&amp; VLOOKUP( $ObjectType.VIAffaire__c.Fields.Name, $ObjectType.VIAffaire__c.Fields.Name , Name) = Name</errorConditionFormula>
    <errorMessage>Ce code affaire existe déjà</errorMessage>
</ValidationRule>