force-app/main/default/objects/VIAffaire__c/listViews/Affaires_commen_ant_par_L.listView-meta.xml
<ListView>
    <fullName>Affaires_commen_ant_par_L</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>L</value>
    </filters>
    <label>Affaires L</label>
</ListView>