force-app/main/default/objects/VIAffaire__c/listViews/Affaires_de_location_ouvertes.listView-meta.xml
<ListView>
    <fullName>Affaires_de_location_ouvertes</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Produit_SousDomaine__c</field>
        <operation>equals</operation>
        <value>LOC</value>
    </filters>
    <filters>
        <field>Date_de_SAV_reelle__c</field>
        <operation>equals</operation>
    </filters>
    <label>Affaires de location ouvertes</label>
</ListView>