force-app/main/default/objects/VIAffaire__c/listViews/Affaires_en_cours.listView-meta.xml
<ListView>
    <fullName>Affaires_en_cours</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <columns>Budget_PV__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Code_sous_domaine__c</field>
        <operation>notContain</operation>
        <value>zz</value>
    </filters>
    <label>Affaires en cours</label>
</ListView>