force-app/main/default/objects/VIAffaire__c/listViews/Affaires_en_cours_pas_vue_depuis_3_mois.listView-meta.xml
<ListView>
    <fullName>Affaires_en_cours_pas_vue_depuis_3_mois</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_derniere_revue__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:90</value>
    </filters>
    <label>Affaires en cours pas vue depuis 3 mois</label>
</ListView>