force-app/main/default/objects/VIAffaire__c/listViews/Affaires_V.listView-meta.xml
<ListView>
    <fullName>Affaires_V</fullName>
    <columns>NAME</columns>
    <columns>Nom_affaire__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <columns>Budget_PRI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>V</value>
    </filters>
    <label>Affaires V</label>
</ListView>