force-app/main/default/objects/VIAffaire__c/listViews/Affaires_vues_aujourd_hui.listView-meta.xml
<ListView>
    <fullName>Affaires_vues_aujourd_hui</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Chef_de_projet__c</columns>
    <columns>Budget_PV__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <columns>Business_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_de_derniere_revue__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Affaires passées en revue aujourd&apos;hui</label>
</ListView>