force-app/main/default/objects/VIAffaire__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Entite_BW__c</columns>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <columns>Date_de_fin_de_garantie__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>