force-app/main/default/objects/VIAffaire__c/listViews/Copie_de_Affaires_en_cours.listView-meta.xml
<ListView>
    <fullName>Copie_de_Affaires_en_cours</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Chef_de_projet__c</columns>
    <columns>Budget_PV__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Date_de_derniere_revue__c</columns>
    <columns>Etat_de_l_affaire__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Chef_de_projet__c</field>
        <operation>contains</operation>
        <value>granier</value>
    </filters>
    <filters>
        <field>Cycle_RAD__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Affaires - RAD (Toutes)</label>
</ListView>