force-app/main/default/objects/VIAffaire__c/listViews/Mes_affaires_RAD.listView-meta.xml
<ListView>
    <fullName>Mes_affaires_RAD</fullName>
    <columns>Entite_BW__c</columns>
    <columns>NAME</columns>
    <columns>Nom_affaire__c</columns>
    <columns>Date_ouverture_affaire__c</columns>
    <columns>Date_de_SAV_previsionnelle__c</columns>
    <columns>Date_de_SAV_reelle__c</columns>
    <columns>Date_de_fin_de_garantie__c</columns>
    <columns>Produit_SousDomaine__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CurrentProjectManager__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Cycle_RAD__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mes affaires RAD</label>
</ListView>