force-app/main/default/objects/VIAffaire__c/listViews/Recemment_modifiees.listView-meta.xml
<ListView>
    <fullName>Recemment_modifiees</fullName>
    <columns>NAME</columns>
    <columns>Compte__c</columns>
    <columns>Nom_affaire__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>Récemment modifiées</label>
</ListView>